@@ -4,6 +4,14 @@
 
         More pep8 compliance.
 
+        * Scripts/webkitpy/mock_bugzillatool.py:
+
+2010-01-24  Adam Barth  <abarth@webkit.org>
+
+        Rubber stamped by Eric Seidel.
+
+        More pep8 compliance.
+
         * Scripts/webkitpy/executive.py:
         * Scripts/webkitpy/grammar.py:
 
